name:                day12
version:             0.1.0.0
synopsis:            Simple project template from stack
license:             BSD3
license-file:        LICENSE
author:              Lucas Nunno
maintainer:          example@example.com
copyright:           2017 Lucas Nunno
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:

executable day12
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , aeson
                       , bytestring

