name:                day12
version:             0.1.0.0
author:              Lucas Nunno
copyright:           2017 Lucas Nunno
build-type:          Simple
cabal-version:       >=1.10

executable day12
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , aeson
                       , bytestring

